[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents"
version = "0.1.0"
description = "Agent implementations using Google ADK and LangGraph with MCP support"
requires-python = ">=3.12"
dependencies = [
    # Google ADK for MCP integration
    "google-adk",
    # LangGraph and LangChain
    "langgraph>=0.2.60",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.8",
    "langchain-core>=0.3.30",
    # LangChain MCP Adapters for native MCP support in LangGraph
    "langchain-mcp-adapters>=0.1.0",
    # Environment variables
    "python-dotenv>=1.0.0",
    # Data manipulation
    "pandas>=2.2.0",
    # Disaster Data Collection Agent Dependencies (US1.1, US1.2, US1.3)
    # Web search (free, no API key required)
    "ddgs>=9.0.0",
    # AI-powered web crawling (Crawl4AI)
    "crawl4ai>=0.3.0",
    # HTML parsing for structured data extraction
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Kafka client for message packet generation
    "kafka-python>=2.0.2",
]

[tool.setuptools]
packages = ["google_adk", "langgraph"]
